apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'edu.purdue.cs.toydroid.bidtext.TextLeak'

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

distTar.enabled = false

repositories {
    mavenCentral()
    google() // for smali
}

distributions {
    main {
        distributionBaseName = 'BidText'
        // include the configuration files into the distribution zip
        contents {
            into('/' + distributions.main.distributionBaseName) {
                from '.'
                include 'dat/*'
                exclude 'dat/Config.properties'
            }
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs = ["src"]
        }
        resources {
            srcDirs = ["res"]
        }
    }
}


jar {
    archiveBaseName = 'ToyDroid.BidText'
    manifest {
        attributes 'Main-Class': 'edu.purdue.cs.toydroid.bidtext.TextLeak'
    }
}

dependencies {
    implementation 'com.ibm.wala:com.ibm.wala.core:1.6.4'
    implementation 'com.ibm.wala:com.ibm.wala.cast:1.6.4'
    implementation 'com.ibm.wala:com.ibm.wala.dalvik:1.6.4'
    implementation 'org.apktool:apktool-lib:2.8.1'
//    implementation 'com.android.tools.smali:smali:3.0.5'
    implementation 'org.smali:dexlib2:2.5.2'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
    implementation 'org.slf4j:slf4j-api:2.0.12'
//    implementation 'com.google.code.findbugs:jsr305:3.0.2'
//    implementation 'com.google.errorprone:error_prone_annotations:2.25.0'
    implementation 'com.google.guava:guava:33.0.0-jre'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'org.checkerframework:checker-qual:3.42.0'
    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.6'
//    implementation 'commons-cli:commons-cli:1.6.0' //1.2
    implementation 'org.ogce:xpp3:1.1.6'


    // local libs
    implementation fileTree(dir: 'lib', include: ['*.jar'])
}


